# cpp_ai_first_lib

./: CMakeLists.txt  README.md  first.cpp
src/: conversion_function.cpp  main.cpp  math_utils.cpp  vector_growth.cpp
